# aqi-watcher

./: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.airflow.yaml  docker-compose.timescale.yaml  docker-compose.yml  pyproject.toml
app/config/: config.yaml
app/dags/: data_extraction_dag.py
app/dags/connectors/: http_connector.py
app/dags/custom_hooks/: http_custom_async_hook.py
app/dags/custom_operators/: http_async_operator.py
app/dags/util/: DBConnector.py  config_parser.py
app/include/connectors/: base_connection.py  create_connection.py  http_connector.py
app/include/custom_hooks/: http_custom_async_hook.py
app/include/custom_operators/: http_async_operator.py
app/include/dto/: request_dto.py  response_formulator.py
app/include/models/: request_model.py
app/include/util/: DBConnector.py
app/logs/scheduler/: latest
app/plugins/connectors/: http_connector.py
app/plugins/custom_hooks/: http_custom_async_hook.py
app/plugins/custom_operators/: http_async_operator.py
app/util/: DBConnector.py
src/aqi_watcher/connectors/: http_connector.py
src/aqi_watcher/custom_hooks/: http_custom_async_hook.py
src/aqi_watcher/custom_operators/: http_async_operator.py
src/aqi_watcher/models/: http_connector.py  request_model.py
src/config/: config.yaml
src/util/: Singleton.py
